# bur

./: .gitignore  Cargo.toml  README.md  ideas.txt
examples/: hello_world.rs  template.rs
src/: config.rs  main.rs
src/modules/: bat.rs  binance.rs  binance_prices.rs  cpu.rs  cpu_usage.rs  crypto.rs  crypto_prices.rs  idena.rs  mem.rs  mem_usage.rs  mod.rs  network.rs  time.rs  wifi.rs
