[package]
name = "bur"
version = "0.1.0"
authors = ["eggmund <joshuacolclough2@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", optional = true }
log = "0.4"
pretty_env_logger = { version = "0.4", optional = true }
network-manager = { version = "0.11", optional = true }
binance = { version = "0.10", optional = true }

[features]
default = ["time", "network"]

logger = ["pretty_env_logger"]
time = ["chrono"]
network = ["network-manager"]
binance_prices = ["binance"]